More reliabily read output from productInfo validate